# Stm32g483-Lib

./: .cproject  .gitignore  .project  CMakeLists.txt  STM32G483CETX_FLASH.ld  STM32G483CETX_RAM.ld  empty_test Debug.launch  q  q.pub
Debug/: empty_test.elf  empty_test.list  empty_test.map  makefile  objects.list  sources.mk
Debug/Src/: main.cyclo  main.d  main.su  subdir.mk
Debug/Src/lib/: dma.cyclo  dma.d  dma.su  subdir.mk
Debug/Src/lib/analog/: adc.cyclo  adc.d  adc.su  dac.cyclo  dac.d  dac.su  subdir.mk
Debug/Src/lib/digital/: gpio.cyclo  gpio.d  gpio.su  subdir.mk
Debug/Startup/: startup_stm32g483cetx.d  subdir.mk
Inc/: adc.h  dac.h  dma.h  gpio.h  registers.h  util.h
Src/: main.c
Src/lib/: dma.c
Src/lib/analog/: adc.c  dac.c
Src/lib/digital/: gpio.c
Startup/: startup_stm32g483cetx.s
